# Physical-AI-Interactive-Biped-Humanoid-Robot

./: README.md
Modeling,BalancingAndWalkingControl/: F.csv  Gi.csv  Gx.csv  Series_elastic_actuator_model.m  Workspace.m  ZMP.m  ZMP_V2.m  f.mat  g.mat  inverse_kinematics.m  plan_footsteps.m
ROS2/src/biped_ai_agent/: package.xml  setup.cfg  setup.py
ROS2/src/biped_ai_agent/biped_ai_agent/: ai_agent.py  audio_audio_capture.py  dialogue_dialogue_manager.py  dialogue_ollama_client.py  list_people.py  main.py  stt_vosk_streaming_stt.py  tts_tts_service.py  vision_face_recognition.py
ROS2/src/biped_ai_agent/biped_ai_agent/config/: config.yaml
ROS2/src/biped_description/: CMakeLists.txt  package.xml
ROS2/src/biped_description/launch/: biped_state_publisher.launch.py
ROS2/src/biped_description/urdf/: biped.urdf
ROS2/src/biped_gateway/: CMakeLists.txt  package.xml
ROS2/src/biped_gateway/include/biped_gateway/: biped_mapping.hpp
ROS2/src/biped_gateway/src/: gateway_node.cpp
ROS2/src/biped_kinematics/: CMakeLists.txt  package.xml
ROS2/src/biped_kinematics/include/biped_kinematics/: ankle_math.hpp  hip_3upr.hpp
ROS2/src/biped_kinematics/launch/: leg.launch.py
ROS2/src/biped_kinematics/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/src/biped_kinematics/src/: ankle_fk_node.cpp  ankle_ik_node.cpp  hip_fk_node.cpp  hip_ik_node.cpp  upper_body_controller.cpp
ROS2/src/biped_odometry/: CMakeLists.txt  package.xml
ROS2/src/biped_odometry/src/: biped_odometry_node.cpp
ROS2/src/biped_operation/: CMakeLists.txt  package.xml
ROS2/src/biped_operation/config/: nav2_params.yaml
ROS2/src/biped_operation/launch/: biped_core.launch.py
ROS2/src/biped_perception/: CMakeLists.txt  package.xml
ROS2/src/biped_perception/launch/: vision_sensor.launch.py
ROS2/src/biped_utils/: CMakeLists.txt  package.xml
ROS2/src/biped_utils/include/biped_utils/: biped_mapping.hpp
ROS2/src/biped_walking_controller/: CMakeLists.txt  package.xml
ROS2/src/biped_walking_controller/include/biped_walking_controller/: footstep_planner.hpp  zmp_generator.hpp
ROS2/src/biped_walking_controller/src/: biped_walking_node.cpp  swing_trajectory_generator.cpp
