<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>biped_perception</name>
  <version>1.0.0</version>
  <description>
  This package is the main perception used for our bipedal robot 
  </description>
  <maintainer email="Omargeasaa@gmail.com">geasa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>astra_camera</exec_depend>
    <exec_depend>sllidar_ros2</exec_depend>
    <exec_depend>launch_xml</exec_depend>
  </export>
</package>


